# hrl_autobed_dev

./: .gitignore  LICENSE  README  check_network.sh  manifest.xml  sharp_noise_analyzer.py
autobed_engine/: CMakeLists.txt  autobed_engine.py  mainpage.dox  manifest.xml  package.xml  setup.py
autobed_engine/arduino/: four_channel_adc.ino  hrl_arduino.ino  hrl_arduino_sensors.ino  hrl_autobed_adxl.ino
autobed_engine/launch/: autobed_engine.launch  autobed_engine_henryc.launch  autobed_henryc.launch
autobed_engine/params/: .autobed_config_data.yaml.swp  autobed_accelerometer_calibration.yaml  autobed_config_data.yaml  darpa_arm_prox_sensors_link_1.yaml  darpa_arm_prox_sensors_link_2_current.yaml  hrl_darpa_arm_skin_taxels.yaml
autobed_engine/src/: adxl_accel_driver.py  autobed_adxl_sharp_driver.py  autobed_engine.py  autobed_engine_henryc.py  autobed_state_publisher.py  fake_ari_publisher.py  fake_ari_publisher.py~  fsascan_restarter.py  hokuyo_interpreter.py  hokuyo_scan.py  sensor_curve_fitting.py  serial_driver.py  sharp_noise_analyzer.py  sharp_prox_driver.py  sharp_sensor_cal.py
autobed_engine/src/autobed_engine/srv/: _add_bed_config.py
autobed_engine/src/hrl_autobed_dev/srv/: __init__.py  _add_bed_config.py
autobed_engine/srv/: add_bed_config.srv
autobed_engine/srv_gen/lisp/: _package_add_bed_config.lisp
autobed_engine/udev/: 51-boditrak-usb.rules  81-hokuyo.rules  82-accelerometer.rules
autobed_engine/urdf/bed_and_body/: manifest.xml
autobed_engine/urdf/bed_and_body/launch/: gazebo.launch
autobed_engine/urdf/bed_and_body/meshes/: bed_frame_link.STL  foot_right_link.STL  lower_body_lleg_link.STL  lower_body_rleg_link.STL  quad_left_link.STL  upper_body_link.STL
autobed_physical_trainer/: boot_autobed_sensors.sh  convert_bag_to_p.sh  create_head_orientation_dataset.sh  create_mat_axes_missing_data.sh  mainpage.dox  manifest.xml  start_recording.sh
autobed_pose_estimator/: mainpage.dox  manifest.xml  start_autobed.sh  start_testing.sh  start_training.sh
autobed_web/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
autobed_web/launch/: autobed_marvin.launch  autobed_web.launch  autobed_web_pi.launch
autobed_web/scripts/: autobed_kill_marvin.sh  autobed_kill_pi.sh  autobed_start.sh  autobed_start_all_henryc.sh  autobed_start_all_marvin.sh  autobed_start_pi.sh  crontab_entry.txt  test.sh
autobed_web/www/: autobed.html  autobed.js
gazebo_pressuremat_plugin/: CMakeLists.txt  ros_pressuremat_plugin.cc
hrl_gazebo_autobed/: CMakeLists.txt  README  autobed.world  generate_sdf_from_urdf.sh  light_urdf.vcg  mainpage.dox  manifest.xml  rviz_start_autobed.sh  start_autobed.sh  urdf.vcg
params/: autobed_config_data.yaml  darpa_arm_prox_sensors_link_1.yaml
src/: .autobed_engine.py.swo  .autobed_engine.py.swp  .fake_ari_publisher.py.swp  .sharp_noise_analyzer.py.swp  .sharp_prox_driver.py.swo  .sharp_prox_driver.py.swp  autobed_engine.py  fake_ari_publisher.py  sensor_curve_fitting.py  serial_driver.py  sharp_noise_analyzer.py  sharp_sensor_cal.py  (+1 more)
(+122 files in other folders)
